# Sonification

./: .gitignore  README.md  pyproject.toml  vgg.py
CellularAutomaton/: ca2snd.py  pyproject.toml  utils.py
VirtualCreatures/: agents.py  ca2snd.py  environments.py  push_env.py  push_task.py  pyproject.toml  utils.py
Xenobots/: README.md  act2midi.py  algorithms.py  ca2snd.py  mv2midi.py  mv2snd.py  pyproject.toml  settings.py  track_mv.py  utils.py  vid2snd.py
Xenobots/sample_trajectories/: swarm.csv
