[project]
name = "sonification"
version = "0.1.0"
description = "This is project explores sonification of sensory data as an additional avenue to highlight interesting patterns."
authors = [
    {name = "Caspar Luc",email = "luc.caspar@cross-compass.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "mido (>=1.3.3,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "cellpylib (>=2.4.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
