[project]
name = "virtual_creatures"
version = "0.1.0"
description = "Apply sonification to various virtual creatures as a means of communication to solve a collaborative task."
authors = [
    {name = "Caspar Luc",email = "luc.caspar@cross-compass.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "cellpylib (>=2.4.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pedalboard (>=0.9.16,<0.10.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pymunk (>=6.11.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
