[project]
name = "sonic_xenobots"
version = "0.1.0"
description = ""
authors = [
    {name = "Caspar Luc",email = "luc.caspar@cross-compass.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numba (>=0.61.0,<0.62.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "librosa (>=0.10.2.post1,<0.11.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "mido (>=1.3.3,<2.0.0)",
    "hilbertcurve (>=2.0.5,<3.0.0)",
    "bytetracker @ git+https://github.com/kadirnar/bytetrack-pip.git",
    "loguru (>=0.7.3,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
